--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,11 @@
 {
   "version": 2,
-  "functions": {
-    "api/flood-rescue.js": {
-      "runtime": "nodejs18.x"
+  "builds": [
+    {
+      "src": "api/flood-rescue.js",
+      "use": "@vercel/node"
     }
-  },
+  ],
   "routes": [
     {
       "src": "/api/flood-rescue",
