Fix root path 404 - add index.js handler

--- a/vercel.json
+++ b/vercel.json
@@ -6,8 +6,8 @@
       "use": "@vercel/node"
     },
     {
-      "src": "index.html",
-      "use": "@vercel/static"
+      "src": "api/index.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
@@ -18,7 +18,11 @@
     },
     {
       "src": "/",
-      "dest": "/index.html"
+      "dest": "/api/index.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/api/index.js"
     }
   ]
 }
